# Browser_Agent

./: .gitignore  HOWTORUN.md  README.md  main.py  pyproject.toml
action/: execute_step.py  executor.py
action/sandbox_state/: 003707eb-95a0-4222-a795-c05d46b3ef7e.json  10c14511-38c6-49a9-8846-bc1cd8261d06.json  10dfe26b-d444-464b-89c8-f7d52c5098d2.json  1c42bcff-1954-4a9e-8c36-52493bf00e61.json  (+41 more)
agent/: agentSession.py  agent_loop3.py  contextManager.py  model_manager.py
browserMCP/: README.md  __init__.py  browser_mcp_sse.py  browser_mcp_stdio.py  mcp_future_implementations.py  mcp_tools.py  utils.py
browserMCP/dom/: views.py  (+2 more)
config/: mcp_server_config.yaml  profiles.yaml
decision/: decision.py  decision_test.py
dom_dumps/: dom_snapshot_20250522_110023.json  dom_snapshot_20250522_110027.json  dom_snapshot_20250522_110110.json  dom_snapshot_20250522_110125.json  dom_snapshot_20250522_111017.json  dom_snapshot_20250522_111019.json  dom_snapshot_20250522_111024.json  dom_snapshot_20250522_111035.json  dom_snapshot_20250522_111217.json  dom_snapshot_20250522_111225.json  dom_snapshot_20250522_111239.json  dom_snapshot_20250522_111321.json
heuristics/: heuristics.py
mcp_servers/: captioning_text.py  mcp_server_1.py  mcp_server_2.py  mcp_server_3.py  mcp_server_4.py  multiMCP.py
memory/: memory_indexer.py  memory_search.py
perception/: perception.py  perception_test.py
prompts/: decision_prompt.txt  perception_prompt.txt  prompt_check.py  summarizer_prompt.txt  summarizer_prompt_.txt
summarization/: summarizer.py  summarizer_test.py
utils/: utils.py
(+189 files in other folders)
